M FrmUcenici: Save XML, filter table, import txt data. M FrmMain: Load data, btnUcenici click. A Utils: copied from SurvCamWinApp proj. M AppData: DataFolder, Save&Load XML. A UcDGV: base for all DataGridViews.

--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -46,6 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Utils.cs" />
+    <Compile Include="Controls\UcDGV.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Data\AppData.cs" />
     <Compile Include="Data\Ds.Designer.cs">
       <AutoGen>True</AutoGen>
