--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -68,6 +68,12 @@
     <Compile Include="Forms\FrmUcenici.Designer.cs">
       <DependentUpon>FrmUcenici.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmZaposleni.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmZaposleni.Designer.cs">
+      <DependentUpon>FrmZaposleni.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\FrmMain.resx">
@@ -75,6 +81,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmUcenici.resx">
       <DependentUpon>FrmUcenici.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmZaposleni.resx">
+      <DependentUpon>FrmZaposleni.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
