--- a/JISP/Properties/Settings.settings
+++ b/JISP/Properties/Settings.settings
@@ -1,12 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="JISP.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
   <Profiles />
-  <Settings>
-    <Setting Name="DataFolderHome" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">c:\Users\bvnet\OneDrive\x\Posao\JISP\prog_data\</Value>
-    </Setting>
-    <Setting Name="DataFolderAway" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
-    </Setting>
-  </Settings>
+  <Settings />
 </SettingsFile>
