--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -60,6 +60,12 @@
     <Compile Include="Controls\UcExitApp.Designer.cs">
       <DependentUpon>UcExitApp.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\UcLeftPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\UcLeftPanel.Designer.cs">
+      <DependentUpon>UcLeftPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Data\AppData.cs" />
     <Compile Include="Data\Ds.cs">
       <DependentUpon>Ds.xsd</DependentUpon>
@@ -91,6 +97,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Controls\UcLeftPanel.resx">
+      <DependentUpon>UcLeftPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
