M Ds: A Skole M AppData: DodajSkolu M UcDGV: A SetupDgvComboColumn M FrmUcenici, FrmMain: removed unused code

--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -80,6 +80,12 @@
     <Compile Include="Data\WebApi.cs" />
     <Compile Include="Data\Zaposleni.cs" />
     <Compile Include="Data\Zaposlenje.cs" />
+    <Compile Include="Forms\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controls\UcLeftPanel.resx">
       <DependentUpon>UcLeftPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
