Finding new JOBs from JSON file. A Ucenik, JobZahtev: JOB req data M WebApi: A DeserializeList

--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -82,7 +82,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Ds.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Data\JobZahtev.cs" />
     <Compile Include="Data\Srednjoskolac.cs" />
+    <Compile Include="Data\Ucenik.cs" />
     <Compile Include="Data\WebApi.cs" />
     <Compile Include="Data\Zaposleni.cs" />
     <Compile Include="Data\Zaposlenje.cs" />
