M FrmZaposleni: popravljeno filtriranje zaposlenih M UcDGV: A CopyOnCellClick M UcFilterTextBox: FilterCleared M FrmUcenici: M BtnOdRaz_Click() A DUOS M Ds: IdSkole, IdRazreda, IdOdeljenja -> Skola, Razred, Odeljenje (string)

--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -82,6 +82,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Ds.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Data\DUOS.cs" />
     <Compile Include="Data\JobZahtev.cs" />
     <Compile Include="Data\Srednjoskolac.cs" />
     <Compile Include="Data\Ucenik.cs" />
