--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="Classes\JMBG.cs" />
     <Compile Include="Classes\Logger.cs" />
+    <Compile Include="Classes\Marks.cs" />
     <Compile Include="Classes\Utils.cs" />
     <Compile Include="Controls\UcButton.cs">
       <SubType>Component</SubType>
@@ -157,6 +158,12 @@
     <Compile Include="Forms\FrmUcenici.Designer.cs">
       <DependentUpon>FrmUcenici.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmUceniciOcene.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmUceniciOcene.Designer.cs">
+      <DependentUpon>FrmUceniciOcene.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmZaposleni.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -180,6 +187,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmUcenici.resx">
       <DependentUpon>FrmUcenici.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmUceniciOcene.resx">
+      <DependentUpon>FrmUceniciOcene.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmZaposleni.resx">
       <DependentUpon>FrmZaposleni.cs</DependentUpon>
