--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -28,7 +28,7 @@
     <PublisherName>BV</PublisherName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>0.3.0.0</ApplicationVersion>
+    <ApplicationVersion>0.3.2.0</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -133,6 +133,7 @@
       <DependentUpon>Ds.xsd</DependentUpon>
     </Compile>
     <Compile Include="Data\Model\DUOS.cs" />
+    <Compile Include="Data\Model\DUOS_SS.cs" />
     <Compile Include="Data\Model\JobZahtev.cs" />
     <Compile Include="Data\Model\Srednjoskolac.cs" />
     <Compile Include="Data\Model\Ucenik.cs" />
