--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -28,7 +28,7 @@
     <PublisherName>BV</PublisherName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>0.3.2.0</ApplicationVersion>
+    <ApplicationVersion>0.3.3.0</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -95,6 +95,7 @@
     <Compile Include="Classes\JMBG.cs" />
     <Compile Include="Classes\Logger.cs" />
     <Compile Include="Classes\Marks.cs" />
+    <Compile Include="Classes\Ocene.cs" />
     <Compile Include="Classes\SlikeZaposlenih.cs" />
     <Compile Include="Classes\Utils.cs" />
     <Compile Include="Controls\UcButton.cs">
