--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -28,7 +28,7 @@
     <PublisherName>BV</PublisherName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>0.3.3.0</ApplicationVersion>
+    <ApplicationVersion>0.3.5.0</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -94,7 +94,6 @@
   <ItemGroup>
     <Compile Include="Classes\JMBG.cs" />
     <Compile Include="Classes\Logger.cs" />
-    <Compile Include="Classes\Marks.cs" />
     <Compile Include="Classes\Ocene.cs" />
     <Compile Include="Classes\SlikeZaposlenih.cs" />
     <Compile Include="Classes\Utils.cs" />
@@ -137,6 +136,8 @@
     <Compile Include="Data\Model\DUOS.cs" />
     <Compile Include="Data\Model\DUOS_SS.cs" />
     <Compile Include="Data\Model\JobZahtev.cs" />
+    <Compile Include="Data\Model\OcenaUcenika.cs" />
+    <Compile Include="Data\Model\OceneUcenika.cs" />
     <Compile Include="Data\Model\Srednjoskolac.cs" />
     <Compile Include="Data\Model\Ucenik.cs" />
     <Compile Include="Data\Model\UcenikOpste.cs" />
