A testovi i klase u Classes/KoefDuos. M UcDGV: bag u OnCellClick kada je selektovan ceo red. M todo.txt

--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -93,6 +93,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\JMBG.cs" />
+    <Compile Include="Classes\KoefDuos\KoefDuos.cs" />
+    <Compile Include="Classes\KoefDuos\KoefDuosMesec.cs" />
     <Compile Include="Classes\Logger.cs" />
     <Compile Include="Classes\Ocene.cs" />
     <Compile Include="Classes\SlikeZaposlenih.cs" />
