A BackupData: periodično i na klik A WebApi.TakeApiToken(): uzimanje tokena iz req. headera FrmUcenici: uzimanje odraz podataka samo za sel. učenike Ukidanje JISPTests projekta - testovi su prebačeni u xUnitTests

--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -127,6 +127,7 @@
       <DependentUpon>UcLeftPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Data\AppData.cs" />
+    <Compile Include="Data\BackupData.cs" />
     <Compile Include="Data\Ds.cs">
       <DependentUpon>Ds.xsd</DependentUpon>
     </Compile>
