--- a/JISPTests/JISPTests.csproj
+++ b/JISPTests/JISPTests.csproj
@@ -57,7 +57,6 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Classes\JMBGTests.cs" />
-    <Compile Include="Data\WebApiTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +67,9 @@
       <Project>{57350B3C-7EB5-4BC3-92D5-05E597B45807}</Project>
       <Name>JISP</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
