UcDGV: sortiranje je izmenjeno, A StandardSort A FrmUcenikOsnovno: dodavanje i izmena osn. podataka o učeniku

--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -28,7 +28,7 @@
     <PublisherName>BV</PublisherName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>0.3.6.0</ApplicationVersion>
+    <ApplicationVersion>0.3.7.0</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -165,6 +165,12 @@
     <Compile Include="Forms\FrmUcenici.Designer.cs">
       <DependentUpon>FrmUcenici.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmUcenikOsnovno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmUcenikOsnovno.Designer.cs">
+      <DependentUpon>FrmUcenikOsnovno.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmZaposleni.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -188,6 +194,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmUcenici.resx">
       <DependentUpon>FrmUcenici.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmUcenikOsnovno.resx">
+      <DependentUpon>FrmUcenikOsnovno.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmZaposleni.resx">
       <DependentUpon>FrmZaposleni.cs</DependentUpon>
