--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -28,7 +28,7 @@
     <PublisherName>BV</PublisherName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>0.4.1.0</ApplicationVersion>
+    <ApplicationVersion>0.4.3.0</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -186,6 +186,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <EmbeddedResource Include="Controls\UcButton.resx">
+      <DependentUpon>UcButton.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\UcDGV.resx">
       <DependentUpon>UcDGV.cs</DependentUpon>
     </EmbeddedResource>
