--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -28,7 +28,7 @@
     <PublisherName>BV</PublisherName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>0.4.7.0</ApplicationVersion>
+    <ApplicationVersion>0.4.8.0</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -172,11 +172,11 @@
     <Compile Include="Forms\FrmUcenici.Designer.cs">
       <DependentUpon>FrmUcenici.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FrmUcenikOsnovno.cs">
+    <Compile Include="Forms\FrmUcenikImeJOB.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FrmUcenikOsnovno.Designer.cs">
-      <DependentUpon>FrmUcenikOsnovno.cs</DependentUpon>
+    <Compile Include="Forms\FrmUcenikImeJOB.Designer.cs">
+      <DependentUpon>FrmUcenikImeJOB.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FrmZaposleni.cs">
       <SubType>Form</SubType>
@@ -217,8 +217,8 @@
     <EmbeddedResource Include="Forms\FrmUcenici.resx">
       <DependentUpon>FrmUcenici.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FrmUcenikOsnovno.resx">
-      <DependentUpon>FrmUcenikOsnovno.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\FrmUcenikImeJOB.resx">
+      <DependentUpon>FrmUcenikImeJOB.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmZaposleni.resx">
       <DependentUpon>FrmZaposleni.cs</DependentUpon>
