A SkolskaGodina M AppData, FrmMain: A SkolskaGodina: čuvanje i učitavanje M FrmZaposleni: 3 dugmeta za dohvatanje pod. -> kombo i dugme M UcDGV: A TsmiSelekcija()

--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Classes\ObracunZarada\OzMesec.cs" />
     <Compile Include="Classes\Logger.cs" />
     <Compile Include="Classes\Ocene.cs" />
+    <Compile Include="Classes\SkolskaGodina.cs" />
     <Compile Include="Classes\SlikeZaposlenih.cs" />
     <Compile Include="Classes\Utils.cs" />
     <Compile Include="Controls\UcButton.cs">
