--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -28,7 +28,7 @@
     <PublisherName>BV</PublisherName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>0.5.7.0</ApplicationVersion>
+    <ApplicationVersion>0.5.8.0</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -66,7 +66,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
@@ -146,6 +146,7 @@
     <Compile Include="Data\Model\Srednjoskolac.cs" />
     <Compile Include="Data\Model\Ucenik.cs" />
     <Compile Include="Data\Model\UcenikOpste.cs" />
+    <Compile Include="Data\Poruke.cs" />
     <Compile Include="Data\WebApi.cs" />
     <Compile Include="Data\Model\Zaposleni.cs" />
     <Compile Include="Data\Model\Zaposlenje.cs" />
@@ -154,6 +155,12 @@
     </Compile>
     <Compile Include="Forms\FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FrmPoruke.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmPoruke.Designer.cs">
+      <DependentUpon>FrmPoruke.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FrmProstorije.cs">
       <SubType>Form</SubType>
@@ -238,6 +245,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmPoruke.resx">
+      <DependentUpon>FrmPoruke.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmProstorije.resx">
       <DependentUpon>FrmProstorije.cs</DependentUpon>
