--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -28,7 +28,7 @@
     <PublisherName>BV</PublisherName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>0.5.15.0</ApplicationVersion>
+    <ApplicationVersion>0.6.0.0</ApplicationVersion>
     <UseApplicationTrust>true</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\JMBG.cs" />
+    <Compile Include="Classes\LatinicaCirilica.cs" />
     <Compile Include="Classes\ObracunZarada\ObracunZarada.cs" />
     <Compile Include="Classes\ObracunZarada\OzMesec.cs" />
     <Compile Include="Classes\Logger.cs" />
