--- a/JISP/JISP.csproj
+++ b/JISP/JISP.csproj
@@ -184,6 +184,12 @@
     <Compile Include="Forms\FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmNovoEksternoZaposlenje.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmNovoEksternoZaposlenje.Designer.cs">
+      <DependentUpon>FrmNovoEksternoZaposlenje.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmObrazovanje.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -282,6 +288,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmNovoEksternoZaposlenje.resx">
+      <DependentUpon>FrmNovoEksternoZaposlenje.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmObrazovanje.resx">
       <DependentUpon>FrmObrazovanje.cs</DependentUpon>
